WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165381
[CSS Parser] The page-break-* properties are only keyword props for old parser.
https://bugs.webkit.org/show_bug.cgi?id=165381
Summary
[CSS Parser] The page-break-* properties are only keyword props for old parser.
Dave Hyatt
Reported
2016-12-05 09:33:34 PST
[CSS Parser] The page-break-* properties are only keyword props for old parser.
Attachments
Patch
(2.63 KB, patch)
2016-12-05 09:34 PST
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-12-05 09:34:35 PST
Created
attachment 296151
[details]
Patch
Dave Hyatt
Comment 2
2016-12-05 09:36:20 PST
Fixed in
r209320
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug