[CSS Parser] The page-break-* properties are only keyword props for old parser. https://bugs.webkit.org/show_bug.cgi?id=165381

Reviewed by Dean Jackson.

* css/parser/CSSParser.cpp:
(WebCore::isKeywordPropertyID):
* css/parser/CSSParserFastPaths.cpp:
(WebCore::CSSParserFastPaths::isKeywordPropertyID):



Canonical link: https://commits.webkit.org/182995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209320 268f45cc-cd09-0410-ab3c-d52691b4dbfc